fix: 补完剩余低优先级 bug 修复与单元测试
- Bug 7: PersonalDatabaseMenuSupport 反射字段添加兼容性注释
- Bug 8: PersonalDatabaseServiceLogHelper 玩家名改为 UUID 前8位匿名化
- 新增 DatabaseAmountCacheTest 防御性拷贝验证（4个用例）
- 新增 DatabaseQueryEngineTest 并发 buildPage 安全验证
- 新增 PersonalDatabaseServiceViewerHelperTest CopyOnWriteArraySet 行为验证

Co-Authored-By: kimi-for-coding